10 January 2013: Wouter
	- updated RELNOTES.
	- applied patch from Robin Hack to remove double pid file truncation.
	- repattern is called reconfig (because most config options are
	  picked up, except for superuser options (chroot, logfile, port)).

9 January 2013: Wouter
	- 4.0.0b2 is beta2 version tag.

8 January 2013: Matthijs
	- Merge changes from 3.2.15 with trunk:
		* Update docs: CREDITS, NEW-CFG-OPTION, REQUIREMENTS,
		  RELNOTES, TODO
		* Update dname_test.tpkg test.
		* TSIG init only fails if no digests at all can be found.
		* Remove unused tsig_get_algorithm_by_id code (was used by
		  nsd-xfer).
		* Fix some fd leaks.
		* Bug #485: Fallback to DEFAULT_TTL if MSB is set.
		* Fix RCODE when xNAME loop final answer not exist to NXDOMAIN.	

8 January 2013: Wouter
	- Fix make outside of source directory.

7 January 2013: Wouter
	- fixed uninit variable for empty zone axfr request
	- fixed alloc of acl options for config zones so they can be deleted.
	- fixed that pattern name is copied, so that patterns stay the same.
	- repattern also rereads the zones in the config file and applies that
	  to the running server.

21 December 2012: Wouter
	- --with-logfile sets the logfile inside the example documentation.
	- Fixed addzone and delzone inside chroot (thanks Will Pressly).

19 December 2012: Wouter
	- Fixup for libevent-2.1.2.

18 December 2012: Wouter
	- makedist makes sha256 for tarballs.
	- nsd-control start runs an absolute path to start sbin/nsd.

17 December 2012: Wouter
	- Fix for use with libev (no use of event.ev_flags).

12 December 2012: Wouter
	- 4.0.0b1 is beta1 version.

11 December 2012: Matthijs
	- Better ILNP RR parsing (thanks Stephane Bortzmeyer).

11 December 2012: Wouter
	- fix libevent=no signals on Solaris.
	- Fix handle of activated zones from timeout event.
	- contrib/nsd_munin_ updated with memory lookup for BSD.

10 December 2012: Wouter
	- implement --with-libevent=no.

10 December 2012: Matthijs