@@ -355,8 +355,9 @@ zone. May end with a '.' (in FQDN notation). For example
 each zone.
 .TP
 .B zonefile:\fR <filename>
-The file containing the zone information. This attribute must be present
-in each zone.
+The file containing the zone information. If this attribute is present
+it is used to read and write the zone contents. If the attribute is
+absent it prevents writing out of the zone.
 .TP
 .B allow\-notify:\fR <ip\-spec> <key\-name | NOKEY | BLOCKED>
 Access control list. The listed (primary) address is allowed to 
